Prevent image cutoff in full size view
Temporary fix. Was fixed in a better way before but unfortunately
lost that due to file system issues.

--- a/refs/style.css
+++ b/refs/style.css
@@ -21,10 +21,12 @@
     bottom: 0;
     z-index: 10;
     background-color: rgba(0, 0, 0, 0.75);
-    overflow: auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 #lbImg{
     margin: auto;
+    max-width: 100vw;
 }
 #gallery img {
     cursor: pointer;
